package entities.enums;

public enum TipoEmail {
    CASA,
    TRABALHO,
    OUTROS;
}
