package entities.enums;

public enum TipoEndereco {
    CASA,
    TRABALHO,
    OBRA,
    OUTROS;
}
