package entities.enums;

public enum TipoFrete {
    CIF,
    FOB;
}
