package entities.enums;

public enum TipoTelefone {
    CASA,
    CELULAR,
    TRABALHO,
    OUTROS;
}
